fluxcd/base/inoa-fleet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fleet
spec:
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: fleet
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-mqtt
  annotations:
    external-dns.alpha.kubernetes.io/hostname: mqtt.<patched>.inoa.io
spec:
  type: LoadBalancer
  ports:
    - name: mqtt
      port: 443
      targetPort: mqtt
  selector:
    app.kubernetes.io/name: fleet
